added cosmo submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "tdata"]
 	path = tdata
 	url = https://github.com/OpenFusionProject/tabledata.git
+[submodule "cosmo"]
+	path = cosmo
+	url = https://github.com/CPunch/Cosmo.git
